--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -20,12 +20,27 @@ collections: # A list of collections the CMS should be able to edit
     #filter: {field: "contenttype", value: "section"}    
     #create: true
     #slug: "principal.{{language}}"
-    files:
-      - file: "content/principal/principal.md"
-        label: "Principal"
-        name: "principal"
-        fields:
-          - {label: Title, name: title, widget: string}
+    fields:
+      - {label: title, name: title, widget: string}
+      - label: ambits_especialitzacio
+        name : ambits_especialitzacio
+        widget : list
+        fields : 
+          - {label: display_name, name: display_name, widget: string }
+          - {label: value, name: value, widget: string }
+      - label: ods
+        name : ods 
+        widget: list 
+        fields : 
+          - { label : display_name, name: display_name, widget: string }
+          - { label : value, name: value, widget: string }
+          - { label : color, name : color, widget : string }
+      - label: centre
+        name : centre 
+        widget: list
+        fields : 
+          - { label : display_name, name: display_name, widget: string }
+          - { label : value, name: value, widget: string }
       # - file: "content/principal/principal.{{language}}.md"
       #   label: "Menu"
       #   name: "menu"
