update config.yml multilang

--- a/themes/uoc/static/admin/config.yml
+++ b/themes/uoc/static/admin/config.yml
@@ -61,39 +61,84 @@ collections: # A list of collections the CMS should be able to edit
             fields:
               - {label: "Camp", name: "display_name", widget: string}
               - {label: "valor", name: "value", widget: string}
-      # - label: "ES"
-      #   name: "es"
-      #   file: "content/principal/principal_test.es.md"
-      #   #format: "json"
-      #   #extension: "json"
-      #   create: true
-      #   fields:
-      #     - {label: "Título", name: "title", widget: string}
-      #     - label: "ambits_especialitzacio"
-      #       name: "ambits_especialitzacio"
-      #       widget: "list"
-      #       fields:
-      #         - {label: "Campo", name: "display_name", widget: string}
-      #         - {label: "Valor", name: "value", widget: string}
-      #     - label: "ods"
-      #       name: "ods"
-      #       widget: "list"
-      #       fields:
-      #         - {label: "Campo", name: "display_name", widget: string}
-      #         - {label: "Valor", name: "value", widget: string}
-      #         - {label: "Imagen", name: "img", widget: image}
-      #     - label: "sector_productiu"
-      #       name: "sector_productiu"
-      #       widget: "list"
-      #       fields:
-      #         - {label: "Campo", name: "display_name", widget: string}
-      #         - {label: "Valor", name: "value", widget: string}
-      #     - label: "centre"
-      #       name: "centre"
-      #       widget: list
-      #       fields:
-      #         - {label: "Campo", name: "display_name", widget: string}
-      #         - {label: "valor", name: "value", widget: string}
+      - label: "ES"
+        name: "es"
+        file: "content/principal/principal.es.md"
+        #format: "json"
+        #extension: "json"
+        create: true
+        fields:
+          - {label: "Título", name: "title", widget: string}
+          - label: "ambits_especialitzacio"
+            name: "ambits_especialitzacio"
+            widget: "list"
+            fields:
+              - {label: "Campo", name: "display_name", widget: string}
+              - {label: "Valor", name: "value", widget: string}
+          - label: "ods"
+            name: "ods"
+            widget: "list"
+            fields:
+              - {label: "Campo", name: "display_name", widget: string}
+              - {label: "Valor", name: "value", widget: string}
+              - {label: "Imagen", name: "img", widget: image}
+          - label: "sector_productiu"
+            name: "sector_productiu"
+            widget: "list"
+            fields:
+              - {label: "Campo", name: "display_name", widget: string}
+              - {label: "Valor", name: "value", widget: string}
+          - label: "centre"
+            name: "centre"
+            widget: list
+            fields:
+              - {label: "Campo", name: "display_name", widget: string}
+              - {label: "valor", name: "value", widget: string}
+          - label: "Albira Content"
+            name: "albiraContent"
+            widget: list
+            fields:
+              - {label: "Camp", name: "display_name", widget: string}
+              - {label: "valor", name: "value", widget: string}
+        - label: "EN"
+        name: "en"
+        file: "content/principal/principal.en.md"
+        #format: "json"
+        #extension: "json"
+        create: true
+        fields:
+          - {label: "Title", name: "title", widget: string}
+          - label: "ambits_especialitzacio"
+            name: "ambits_especialitzacio"
+            widget: "list"
+            fields:
+              - {label: "Key", name: "display_name", widget: string}
+              - {label: "Value", name: "value", widget: string}
+          - label: "ods"
+            name: "ods"
+            widget: "list"
+            fields:
+              - {label: "Key", name: "display_name", widget: string}
+              - {label: "Value", name: "value", widget: string}
+              - {label: "Image", name: "img", widget: image}
+          - label: "sector_productiu"
+            name: "sector_productiu"
+            widget: "list"
+            fields:
+              - {label: "Key", name: "display_name", widget: string}
+              - {label: "Value", name: "value", widget: string}
+          - label: "centre"
+            name: "centre"
+            widget: list
+            fields:
+              - {label: "Key", name: "display_name", widget: string}
+              - {label: "Value", name: "value", widget: string}
+          - label: "Albira Content"
+            name: "albiraContent"
+            widget: list
+            fields:
+              - {label: "Key", name: "display_name", widget: string}
+              - {label: "Value", name: "value", widget: string}
       # - label: "EN"
       #   name: "en"
       #   file: "content/principal/principal.en.md"
