--- a/themes/uoc/static/admin/config.yml
+++ b/themes/uoc/static/admin/config.yml
@@ -30,6 +30,7 @@ collections: # A list of collections the CMS should be able to edit
         create: true
         fields:
           - {label: "Títol", name: "title", widget: string}
+          - {label: "Selector custom", name: "selector", widget: "selector_custom"}
           - label: "ambits_especialitzacio"
             name: "ambits_especialitzacio"
             widget: "list"
