--- a/themes/uoc/static/admin/config.yml
+++ b/themes/uoc/static/admin/config.yml
@@ -30,7 +30,6 @@ collections: # A list of collections the CMS should be able to edit
         create: true
         fields:
           - {label: "Títol", name: "title", widget: string}
-          - {label: "Selector custom", name: "selector", widget: "selector_custom"}
           - label: "ambits_especialitzacio"
             name: "ambits_especialitzacio"
             widget: "list"
@@ -140,6 +139,16 @@ collections: # A list of collections the CMS should be able to edit
             fields:
               - {label: "Key", name: "display_name", widget: string}
               - {label: "Value", name: "value", widget: string}
+  - label: "widget Test - PoC widgets"
+    name: "widgetTest"
+    folder: "widgetTest"
+    create: true
+    editor: 
+      preview: false        
+    slug: "{{slug}}"
+    fields:
+      - {label: "Title", name: "title", widget: "hidden"}
+      - {label: "Selector custom", name: "selector", widget: "selector_custom"}
       # - label: "EN"
       #   name: "en"
       #   file: "content/principal/principal.en.md"
@@ -368,3 +377,4 @@ collections: # A list of collections the CMS should be able to edit
       - {label: "Date", name: "date", widget: "datetime"}
     editor:
       - preview: false
+      
