--- a/themes/uoc/static/admin/config.yml
+++ b/themes/uoc/static/admin/config.yml
@@ -139,16 +139,9 @@ collections: # A list of collections the CMS should be able to edit
             fields:
               - {label: "Key", name: "display_name", widget: string}
               - {label: "Value", name: "value", widget: string}
-  - label: "widget Test - PoC widgets"
-    name: "widgetTest"
-    folder: "widgetTest"
-    create: true
-    editor: 
-      preview: false        
-    slug: "{{slug}}"
-    fields:
-      - {label: "Title", name: "title", widget: "hidden"}
-      - {label: "Selector custom", name: "selector", widget: "selector_custom"}
+          - label: "widget Test - PoC widgets"
+            name: "widgetTest"
+            widget: "selector_custom"
       # - label: "EN"
       #   name: "en"
       #   file: "content/principal/principal.en.md"
