--- a/themes/uoc/static/admin/config.yml
+++ b/themes/uoc/static/admin/config.yml
@@ -139,6 +139,7 @@ collections: # A list of collections the CMS should be able to edit
             fields:
               - {label: "Key", name: "display_name", widget: string}
               - {label: "Value", name: "value", widget: string}
+              - {label: "Selector custom", name: "selector", widget: "selector_custom"}
 #  - label: "Dummy - PoC widgets"
 #    name: "dummy"
 #    folder: "dummy"
